@@ -255,6 +255,7 @@ Fixes:
    * Keep the smart members of the naviframe views whenever resize object is changed. This prevents the dangling view objects of the naviframe and keep the layer consistency.
    * In case of scroll in scroll, the child scroller have to bounce if parents don't have a bounce.
    * Fix elm_scroller_page_show bug. It have to save the wanted values to show the wanted page.
+   * Fix non-scrollable entry did not comply focus_highlight data.
    * Block mouse events when the ctxpopup on dismiss.
    * Fix crash of elm_notify when timeout is zero.
    * Fix Segfault in elementary file_selector_example when closed
