@@ -1438,6 +1438,10 @@
 
         * Fix elm_scroller_page_show bug. It have to save the wanted values to show the wanted page.
 
+2013-06-20  Youngbok Shin
+
+	    * Fix non-scrollable entry did not comply focus_highlight data.
+
 2013-06-22  Thiep Ha
 
         * Move cursor when mouse moves with longpress.
